fixed spacing on title root page

--- a/public/styles/button.scss
+++ b/public/styles/button.scss
@@ -9,6 +9,10 @@ button {
   }
   &.home-button {
     background: transparent;
+    padding: 0;
+    transform: translateX(50%) rotate(-90deg) translateX(42%) translateY(-50%);
+    margin-bottom: 4.5rem;
+    margin-right: 5vw;
   }
   &.contact-button {
     border-radius: $box-radius;
