--- a/public/styles/root.scss
+++ b/public/styles/root.scss
@@ -1,12 +1,15 @@
 div.title-box {
   position: absolute;
-  transform: rotate(-90deg);
-  bottom: 33vh;
-  right: -80px;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  justify-content: end;
   // z-index: 2;
   h1 {
     font-weight: normal;
     font-size: 2.5rem;
+    padding: 0;
+    margin: 0;
   }
 }
 
