--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -64,13 +64,16 @@ a {
 
 div.title-box {
   position: absolute;
-  transform: rotate(-90deg);
-  bottom: 33vh;
-  right: -80px;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  justify-content: end;
 }
 div.title-box h1 {
   font-weight: normal;
   font-size: 2.5rem;
+  padding: 0;
+  margin: 0;
 }
 
 div.flex-box {
@@ -133,6 +136,10 @@ button.menu-button {
 }
 button.home-button {
   background: transparent;
+  padding: 0;
+  transform: translateX(50%) rotate(-90deg) translateX(42%) translateY(-50%);
+  margin-bottom: 4.5rem;
+  margin-right: 5vw;
 }
 button.contact-button {
   border-radius: 5px;
